# data-lineage-fix-agent

./: .env.example  .gitignore  .vercelignore  DEMO_SCRIPT.md  EVIDENCE.md  GO_NO_GO.md  LICENSE  Makefile  README.md  RULES_SNAPSHOT.md  STATUS.md  SUBMISSION_DRAFT.md  THIRD_PARTY_NOTICES.md  pyproject.toml  vercel.json
artifacts/runs/20260716T091507467904Z/: EVIDENCE.md  before.txt  writeback.json
demo/: app.js  index.html  lineagetx-replay.json  lineagetx-replay.manifest.json  style.css
demo/evidence/20260716T091507467904Z/: after.txt  context.json  finding.json  manifest.json  regression_test.py
demo/evidence/ltx-7ba06b0789512486f0f92f3c/: manifest.json  publication.json
demo/video/: lineagetx-demo-transcript.txt  recording-receipt.json
demo/video/evidence/: manifest.json  publication.json
docs/: demo-script.md  lineagetx-architecture.md  security-model.md
examples/verified-run/: README.md  after.txt  before.txt  context_summary.json  finding.json  patch.diff  writeback.json
fixture_pipeline/: project_mapping.json
fixture_pipeline/broken/pipeline/: customer_revenue.sql
fixtures/: datahub_context.json
fixtures/lineagetx/: migration.json
fixtures/lineagetx/datahub/: mcp_context.json  scenario.json
fixtures/lineagetx/producer/: change_intent.json  (+2 more)
scripts/: bootstrap.sh  gate_lineagetx_live.sh  gate_live.sh  run_lineagetx_live.py  seed_datahub.py  seed_datahub_lite.py  seed_lineagetx_datahub.py
src/data_lineage_fix_agent/: __init__.py  agent.py  cli.py  context.py  evidence.py  lite_gms_bridge.py  live_datahub.py  models.py  pipeline.py  planner.py
tests/: test_agent.py  test_live_datahub_integration.py
tests/lineagetx/: test_airflow_adapter.py  test_cli_replay.py  test_coordinator.py  test_datahub_context.py  test_dbt_adapter.py  test_demo_integrity.py  test_end_to_end.py  test_evidence.py  test_fixture_contract.py  test_github_approval.py  test_live_runner.py  test_models.py  test_policy.py  test_publisher.py  test_resume.py  test_semantic_approval.py  test_state_store.py  test_worktrees.py  test_writeback.py
(+62 files in other folders)
