[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datalineage-fix-agent"
version = "0.2.0"
description = "LineageTX: a two-phase-commit-inspired safety gate for schema changes across the data graph."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "DataLineage Fix Agent contributors" }]
dependencies = [
  "acryl-datahub==1.6.0.14",
  "duckdb==1.5.4",
  "mcp-server-datahub==0.6.0",
  "mcp==1.28.1",
  "sqlglot==28.10.1",
  "starlette==1.3.1",
  "uvicorn==0.51.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
]

[project.scripts]
datalineage-fix = "data_lineage_fix_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "integration: requires a running local DataHub OSS instance",
]
